--- a/contacts/index.html
+++ b/contacts/index.html
@@ -56,7 +56,7 @@
                               <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="./product/">Продукция</a>
+                              <a href="/product/">Продукция</a>
                            </li>
                            <li>
                               <a href="#production" data-anchor>Производство</a>
@@ -65,10 +65,10 @@
                               <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="./contacts/">Контакты</a>
+                              <a href="/contacts/">Контакты</a>
                            </li>
                            <li>
-                              <a href="./vacancies/">Вакансии</a>
+                              <a href="/vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </div>
@@ -118,7 +118,9 @@
                         <div class="contacts__info-item">
                            <div class="contacts__info-title">E-mail</div>
                            <div data-mail>
-                              <a href="mailto:lkm-trade@yandex.ru" class="contacts__info-contact">lkm-trade@yandex.ru</a>
+                              <a href="mailto:lkm-trade@yandex.ru" class="contacts__info-contact"
+                                 >lkm-trade@yandex.ru</a
+                              >
                            </div>
                         </div>
                         <div class="contacts__info-item">
@@ -171,7 +173,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="#product" data-anchor>Продукция</a>
+                           <a href="/product/" data-anchor>Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
@@ -204,7 +206,9 @@
                         </div>
                      </li>
 
-                     <li class="footer__info-item">Email:<a href="mailto:lkm-trade@yandex.ru">lkm-trade@yandex.ru</a></li>
+                     <li class="footer__info-item">
+                        Email:<a href="mailto:lkm-trade@yandex.ru">lkm-trade@yandex.ru</a>
+                     </li>
                      <li class="footer__info-item">
                         Адрес: Республика Татарстан, Казань, <br />
                         Офис: Улица Достоевского, 52 <br />
