--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <body>
       <div class="wrapper">
          <main class="main">
-            <video autoplay loop muted plays-inline class="main__background">
+            <video autoplay loop muted playsinline class="main__background">
                <source src="./assets/vid/main.mp4" type="video/mp4" />
             </video>
             <header class="header">
@@ -27,7 +27,7 @@
                               <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="./product/">Продукция</a>
+                              <a href="/product/">Продукция</a>
                            </li>
                            <li>
                               <a href="#production" data-anchor>Производство</a>
@@ -36,10 +36,10 @@
                               <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="./contacts/">Контакты</a>
+                              <a href="/contacts/">Контакты</a>
                            </li>
                            <li>
-                              <a href="./vacancies/">Вакансии</a>
+                              <a href="/vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </nav>
@@ -60,7 +60,7 @@
                                  <a href="#about" data-anchor>О компании</a>
                               </li>
                               <li>
-                                 <a href="./product/" data-anchor>Продукция</a>
+                                 <a href="/product/">Продукция</a>
                               </li>
                               <li>
                                  <a href="#production" data-anchor>Производство</a>
@@ -69,10 +69,10 @@
                                  <a href="#news" data-anchor>Пресс-центр</a>
                               </li>
                               <li>
-                                 <a href="./contacts/" data-anchor>Контакты</a>
+                                 <a href="/contacts/">Контакты</a>
                               </li>
                               <li>
-                                 <a href="./vacancies/">Вакансии</a>
+                                 <a href="/vacancies/">Вакансии</a>
                               </li>
                            </ul>
                         </div>
@@ -386,7 +386,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="#product" data-anchor>Продукция</a>
+                           <a href="/product/">Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
