--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -241,7 +241,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="#product" data-anchor>Продукция</a>
+                           <a href="/product/" data-anchor>Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
