--- a/product/index.html
+++ b/product/index.html
@@ -580,7 +580,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="#product" data-anchor>Продукция</a>
+                           <a href="/product/" data-anchor>Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
@@ -589,7 +589,7 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="./vacancies/">Вакансии</a>
+                           <a href="/vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
